--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.4.2",
     "@shadergradient/react": "^2.4.20",
     "@splinetool/react-spline": "^4.1.0",
+    "@tabler/icons-react": "^3.36.0",
     "@tailwindcss/vite": "^4.1.18",
     "camera-controls": "^3.1.0",
     "class-variance-authority": "^0.7.1",
